@@ -77,6 +77,22 @@ GSHashTableFind (struct GSHashTable *ht, const void *value,
   CFHashCode (*fHash)(const void *),
   Boolean (*fEqual)(const void*, const void*));
 
+/* This function iterates through the array stopping at every slot where
+ * a value exists.  Initially, *index should be set to zero (0) and cannot be
+ * NULL.  Returns false whenever there aren't any more slots.
+ */
+const void *
+GSHashTableNext (struct GSHashTable *ht, CFIndex *index);
+
+void
+GSHashTableCopyValues (struct GSHashTable *ht1, struct GSHashTable *ht2,
+  CFAllocatorRef alloc, CFTypeRef (*fRetain)(CFAllocatorRef, const void*),
+  CFHashCode (*fHash)(const void *),
+  Boolean (*fEqual)(const void*, const void*),
+  void (*fAction)(struct GSHashTable*, CFIndex,
+    struct GSHashTable*, CFIndex, void*),
+  void *context);
+
 void
 GSHashTableAddValue (struct GSHashTable *ht, const void *value,
   CFAllocatorRef alloc, CFTypeRef (*fRetain)(CFAllocatorRef, const void*),
@@ -108,10 +124,3 @@ GSHashTableRemoveValue (struct GSHashTable *ht, const void *value,
   Boolean (*fEqual)(const void*, const void*),
   Boolean (*fAction)(struct GSHashTable*, CFIndex, Boolean, void*),
   void *context);
-
-/* This function iterates through the array stopping at every slot where
- * a value exists.  Initially, *index should be set to zero (0) and cannot be
- * NULL.  Returns false whenever there aren't any more slots.
- */
-const void *
-CFHashTableNext (struct GSHashTable *ht, CFIndex *index);
